force-app/main/default/objects/Dispatch_Address__c/Dispatch_Address__c.object-meta.xml
<CustomObject>
    <label>Customer Address</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Customer Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>