force-app/main/default/objects/Dispatch_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Addresses</relationshipLabel>
    <relationshipName>Dispatch_Address</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>