force-app/main/default/objects/Dispatch_Address__c/fields/Account_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_Code__c</fullName>
    <formula>Account__r.Customer_Code_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SAP Code</label>
    <type>Text</type>
</CustomField>