force-app/main/default/objects/Dispatch_Address__c/fields/Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Legal_Name__c</fullName>
    <label>Company Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>