force-app/main/default/objects/Dispatch_Address__c/fields/Customer_Code_SAP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code_SAP__c</fullName>
    <externalId>true</externalId>
    <label>SAP Customer Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>