force-app/main/default/objects/Dispatch_Address__c/fields/FSSAI_Number__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_Number__c</fullName>
    <label>FSSAI Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>