force-app/main/default/objects/Dispatch_Address__c/fields/Initial_SAP_Update__c.field-meta.xml
<CustomField>
    <fullName>Initial_SAP_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial SAP Update</label>
    <type>Checkbox</type>
</CustomField>