force-app/main/default/objects/Dispatch_Address__c/fields/OPTIVA_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>OPTIVA_Customer_Code__c</fullName>
    <externalId>true</externalId>
    <label>OPTIVA Customer Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>