force-app/main/default/objects/Dispatch_Address__c/fields/SAP_Customer_Code_Shipping__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Code_Shipping__c</fullName>
    <externalId>true</externalId>
    <label>SAP Customer Code Shipping</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>