force-app/main/default/objects/Dispatch_Address__c/fields/SAP_Update_Customer__c.field-meta.xml
<CustomField>
    <fullName>SAP_Update_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Update Customer</label>
    <type>Checkbox</type>
</CustomField>