force-app/main/default/objects/Dispatch_Address__c/fields/Shipping_Initial_SAP_Update__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Initial_SAP_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Initial SAP Update</label>
    <type>Checkbox</type>
</CustomField>