force-app/main/default/objects/Dispatch_Address__c/fields/Shipping_Submitted_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Submitted_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Submitted to SAP</label>
    <type>Checkbox</type>
</CustomField>