force-app/main/default/objects/Dispatch_Address__c/fields/Submitted_to_OPTIVA__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_OPTIVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to OPTIVA</label>
    <type>Checkbox</type>
</CustomField>