force-app/main/default/objects/Dispatch_Address__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spec person responsible for sales/purch tax</fullName>
            </value>
            <value>
                <fullName>Unspec person responsible for sales/purch tax</fullName>
            </value>
            <value>
                <fullName>No person responsible for sales/purch tax</fullName>
            </value>
            <value>
                <fullName>Subject to exemption from sales/purch tax</fullName>
            </value>
            <value>
                <fullName>Sales/purch tax consumer</fullName>
            </value>
            <value>
                <fullName>Taxpayer (monotributario)</fullName>
            </value>
            <value>
                <fullName>Unclassified taxpayer</fullName>
            </value>
            <value>
                <fullName>B2B Customers</fullName>
            </value>
            <value>
                <fullName>B2C Customers</fullName>
            </value>
            <value>
                <fullName>B2G Customers</fullName>
            </value>
            <value>
                <fullName>SEZ Customers</fullName>
            </value>
            <value>
                <fullName>Deemed Export Customers</fullName>
            </value>
            <value>
                <fullName>E - Commerce - Registered</fullName>
            </value>
            <value>
                <fullName>E - Commerce - UnRegistered</fullName>
            </value>
            <value>
                <fullName>Export Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>